--- a/src/app/user-setting-form/user-setting-form.component.html
+++ b/src/app/user-setting-form/user-setting-form.component.html
@@ -1,4 +1,12 @@
-<form>
-    <input type="text" placeholder="Name">
-    <button>OK</button>
-</form>
+<div class="container">
+    <h2>User Settings</h2>
+    <form>
+        <div class="form-group">
+        <label for="name"></label>
+        <input id="name" name="name" class="form-control" type="text" placeholder="Name">
+        </div>
+        <button class="btn btn-primary">OK</button>    
+    </form>
+</div>
+
+<!--Because we didn't import BS and used it in angular.json we need to restart app-->
