--- a/src/app/user-setting-form/user-setting-form.component.html
+++ b/src/app/user-setting-form/user-setting-form.component.html
@@ -5,6 +5,35 @@
         <label for="name"></label>
         <input id="name" name="name" class="form-control" type="text" placeholder="Name">
         </div>
+
+        <div class="form-check form-group">  <!--  form-group will make space around the checkBox  -->
+            <input class="form-check-input" type="checkbox" name="emailOffers" id="emailOffers">
+            <label class="form-check-label" for="emailOffers">
+              Email Special Offers
+            </label>
+        </div>
+
+        <h5>User Interface Style</h5>
+        <div class="form-group">
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="interfaceStyle" id="Light" value="light" checked>
+                <label class="form-check-label" for="Light">
+                Light
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="interfaceStyle" id="Medium" value="medium">
+                <label class="form-check-label" for="Medium">
+                Medium
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="interfaceStyle" id="Dark" value="dark">
+                <label class="form-check-label" for="Dark">
+                Dark
+                </label>
+            </div>
+        </div>
         <button class="btn btn-primary">OK</button>    
     </form>
 </div>
