--- a/src/app/user-setting-form/user-setting-form.component.html
+++ b/src/app/user-setting-form/user-setting-form.component.html
@@ -13,7 +13,7 @@
             </label>
         </div>
 
-        <h5>User Interface Style</h5>
+        <p>User Interface Style</p>
         <div class="form-group">
             <div class="form-check">
                 <input class="form-check-input" type="radio" name="interfaceStyle" id="Light" value="light" checked>
@@ -34,6 +34,28 @@
                 </label>
             </div>
         </div>
+
+        <div class="form-group">
+            <label for="subscriptionType">Subscription Type</label>
+            <select class="form-control" id="subscriptionType">
+              <option>Monthly</option>
+              <option>Annualy</option>
+              <option>Lifetime</option>
+            </select>
+          </div>
+
+              
+      <div class="form-group">
+        <label for="notes">Notes</label>
+        <textarea id="notes" name="notes" class="form-control"  
+                  rows="3"></textarea>    <!--Problem with this is that different vrowser will give different look we will use ng bootstrap to provide consisant look-->
+      </div>      
+
+      <div class="form-group">
+        <label for="date"> Date</label>
+        <input type="date" id="date" class="form-control" >
+      </div>
+
         <button class="btn btn-primary">OK</button>    
     </form>
 </div>
