--- a/src/app/user-setting-form/user-setting-form.component.html
+++ b/src/app/user-setting-form/user-setting-form.component.html
@@ -43,7 +43,6 @@
               <option>Lifetime</option>
             </select>
           </div>
-
               
       <div class="form-group">
         <label for="notes">Notes</label>
@@ -60,4 +59,6 @@
     </form>
 </div>
 
-<!--Because we didn't import BS and used it in angular.json we need to restart app-->
+
+
+<!--Because we didn't import BootStrap and used it in angular.json we need to restart app-->
