--- a/src/app/user-setting-form/user-setting-form.component.html
+++ b/src/app/user-setting-form/user-setting-form.component.html
@@ -1,13 +1,14 @@
 <div class="container">
     <h2>User Settings</h2>
+
     <form #form = "ngForm"> <!-- ngForm object is assigned to the variable form -->
         <div class="form-group">
         <label for="name"></label>
-        <input id="name" name="name" class="form-control" type="text" placeholder="Name">
+        <input id="name" name="name" class="form-control" type="text" placeholder="Name" ngModel>
         </div>
 
         <div class="form-check form-group">  <!--  form-group will make space around the checkBox  -->
-            <input class="form-check-input" type="checkbox" name="emailOffers" id="emailOffers">
+            <input class="form-check-input" type="checkbox" name="emailOffers" id="emailOffers" ngModel>
             <label class="form-check-label" for="emailOffers">
               Email Special Offers
             </label>
@@ -16,19 +17,19 @@
         <p>User Interface Style</p>
         <div class="form-group">
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="interfaceStyle" id="Light" value="light" checked>
+                <input class="form-check-input" type="radio" name="interfaceStyle" id="Light" value="light" checked ngModel>
                 <label class="form-check-label" for="Light">
                 Light
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="interfaceStyle" id="Medium" value="medium">
+                <input class="form-check-input" type="radio" name="interfaceStyle" id="Medium" value="medium" ngModel>
                 <label class="form-check-label" for="Medium">
                 Medium
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="interfaceStyle" id="Dark" value="dark">
+                <input class="form-check-input" type="radio" name="interfaceStyle" id="Dark" value="dark" ngModel >
                 <label class="form-check-label" for="Dark">
                 Dark
                 </label>
@@ -37,7 +38,7 @@
 
         <div class="form-group">
             <label for="subscriptionType">Subscription Type</label>
-            <select class="form-control" id="subscriptionType">
+            <select class="form-control" id="subscriptionType" name="subscriptionType" ngModel>
               <option>Monthly</option>
               <option>Annualy</option>
               <option>Lifetime</option>
@@ -47,18 +48,18 @@
       <div class="form-group">
         <label for="notes">Notes</label>
         <textarea id="notes" name="notes" class="form-control"  
-                  rows="3"></textarea>    <!--Problem with this is that different vrowser will give different look we will use ng bootstrap to provide consisant look-->
+                  rows="3" placeholder="some info" ngModel></textarea>    <!--Problem with this is that different vrowser will give different look we will use ng bootstrap to provide consisant look-->
       </div>      
 
       <div class="form-group">
         <label for="date"> Date</label>
-        <input type="date" id="date" class="form-control" >
+        <input type="date" id="date" name="date" class="form-control" ngModel> <!--we gave date a name so that our form object knows that date field exists it is must-->
       </div>
-
         <button class="btn btn-primary">OK</button>    
     </form>
+   
 </div>
 
-  {{form | json}} <!-- printing ngForm value with interpolation and using pipe display format is json  -->
+{{form.value  | json}} <!-- printing ngForm value with interpolation and using pipe display format is json  -->
 
 <!--Because we didn't import BootStrap and used it in angular.json we need to restart app-->
