03. Creating a Data Model

--- a/src/app/user-setting-form/user-setting-form.component.html
+++ b/src/app/user-setting-form/user-setting-form.component.html
@@ -63,3 +63,5 @@
 {{form.value  | json}} <!-- printing ngForm value with interpolation and using pipe display format is json  -->
 
 <!--Because we didn't import BootStrap and used it in angular.json we need to restart app-->
+<!--In many cases we will have an object to popululate form and change it when data changes 
+so we CAN"T USE ngModel this way above we'll have to create data model-->
