--- a/src/app/user-setting-form/user-setting-form.component.html
+++ b/src/app/user-setting-form/user-setting-form.component.html
@@ -4,11 +4,11 @@
     <form #form = "ngForm"> <!-- ngForm object is assigned to the variable form -->
         <div class="form-group">
         <label for="name"></label>
-        <input id="name" name="name" class="form-control" type="text" placeholder="Name" ngModel>
+        <input id="name" name="name" class="form-control" type="text" placeholder="Name" [(ngModel)] = "userSettings.name">
         </div>
 
         <div class="form-check form-group">  <!--  form-group will make space around the checkBox  -->
-            <input class="form-check-input" type="checkbox" name="emailOffers" id="emailOffers" ngModel>
+            <input class="form-check-input" type="checkbox" name="emailOffers" id="emailOffers" [(ngModel)] = "userSettings.emailOffers">
             <label class="form-check-label" for="emailOffers">
               Email Special Offers
             </label>
@@ -17,19 +17,19 @@
         <p>User Interface Style</p>
         <div class="form-group">
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="interfaceStyle" id="Light" value="light" checked ngModel>
+                <input class="form-check-input" type="radio" name="interfaceStyle" id="Light" value="light" checked [(ngModel)] = "userSettings.interfaceStyle">
                 <label class="form-check-label" for="Light">
                 Light
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="interfaceStyle" id="Medium" value="medium" ngModel>
+                <input class="form-check-input" type="radio" name="interfaceStyle" id="Medium" value="medium" [(ngModel)] = "userSettings.interfaceStyle">
                 <label class="form-check-label" for="Medium">
                 Medium
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="interfaceStyle" id="Dark" value="dark" ngModel >
+                <input class="form-check-input" type="radio" name="interfaceStyle" id="Dark" value="dark" [(ngModel)] = "userSettings.interfaceStyle" >
                 <label class="form-check-label" for="Dark">
                 Dark
                 </label>
@@ -38,7 +38,7 @@
 
         <div class="form-group">
             <label for="subscriptionType">Subscription Type</label>
-            <select class="form-control" id="subscriptionType" name="subscriptionType" ngModel>
+            <select class="form-control" id="subscriptionType" name="subscriptionType" [(ngModel)] = "userSettings.subscriptionType">
               <option>Monthly</option>
               <option>Annualy</option>
               <option>Lifetime</option>
@@ -48,19 +48,19 @@
       <div class="form-group">
         <label for="notes">Notes</label>
         <textarea id="notes" name="notes" class="form-control"  
-                  rows="3" placeholder="some info" ngModel></textarea>    <!--Problem with this is that different vrowser will give different look we will use ng bootstrap to provide consisant look-->
+                  rows="3" placeholder="some info" [(ngModel)] = "userSettings.notes"></textarea>    <!--Problem with this is that different vrowser will give different look we will use ng bootstrap to provide consisant look-->
       </div>      
 
       <div class="form-group">
         <label for="date"> Date</label>
-        <input type="date" id="date" name="date" class="form-control" ngModel> <!--we gave date a name so that our form object knows that date field exists it is must-->
+        <input type="date" id="date" name="date" class="form-control" [(ngModel)] = "userSettings.date" > <!--we gave date a name so that our form object knows that date field exists it is must-->
       </div>
         <button class="btn btn-primary">OK</button>    
     </form>
    
 </div>
 
-{{form.value  | json}} <!-- printing ngForm value with interpolation and using pipe display format is json  -->
+<h3>{{userSettings | json}} </h3> <!-- printing ngForm value with interpolation and using pipe display format is json  -->
 
 <!--Because we didn't import BootStrap and used it in angular.json we need to restart app-->
 <!--In many cases we will have an object to popululate form and change it when data changes 
