Copying Form data

--- a/src/app/user-setting-form/user-setting-form.component.html
+++ b/src/app/user-setting-form/user-setting-form.component.html
@@ -58,9 +58,9 @@
         <button class="btn btn-primary">OK</button>    
     </form>
    
-</div>
+</div> 
 
-<h3>{{userSettings | json}} </h3> <!-- printing ngForm value with interpolation and using pipe display format is json  -->
+<h3>{{OriginalUserSettings | json}} </h3> <!-- printing ngForm value with interpolation and using pipe display format is json  -->
 
 <!--Because we didn't import BootStrap and used it in angular.json we need to restart app-->
 <!--In many cases we will have an object to popululate form and change it when data changes 
