--- a/src/app/user-setting-form/user-setting-form.component.html
+++ b/src/app/user-setting-form/user-setting-form.component.html
@@ -4,10 +4,14 @@
     <form #form = "ngForm" ngNativeValidate> <!-- ngForm object is assigned to the variable form ngNativeValidate is disabled by default and we should let it be disabled-->
         <div class="form-group">
         <label for="name"></label>
-        <input id="name" name="name" class="form-control" type="text" placeholder="Name" [(ngModel)] = "userSettings.name" required pattern="M.*A" #classTest>
+        <input id="name" name="name" class="form-control" type="text" placeholder="Name" [(ngModel)] = "userSettings.name" required pattern="M.*A" #propertyTest = "ngModel">
         </div>
-
-<h3> {{classTest.className}} </h3>  <!--CSS class validation we can work and style ith theses classes also properties that are associated with these classes these properties are applied to ngModel-->
+      <h3>dirty: {{propertyTest.dirty}} </h3>
+      <h3>pristine: {{propertyTest.pristine}} </h3>
+      <h3>touched: {{propertyTest.touched}} </h3>
+      <h3>untouched: {{propertyTest.untouched}} </h3>
+      <h3>valid: {{propertyTest.valid}} </h3>
+      <h3>invalid: {{propertyTest.invalid}} </h3>
 
         <div class="form-check form-group">  <!--  form-group will make space around the checkBox  -->
             <input class="form-check-input" type="checkbox" name="emailOffers" id="emailOffers" [(ngModel)] = "userSettings.emailOffers">
