--- a/src/app/user-setting-form/user-setting-form.component.html
+++ b/src/app/user-setting-form/user-setting-form.component.html
@@ -5,7 +5,7 @@
         <div class="form-group">
         <label for="name"></label>
         <input id="name" name="name" class="form-control" type="text" placeholder="Name" [(ngModel)] = "userSettings.name" required #nameField = "ngModel" 
-               [class.field-error] = "form.submitted && nameField.invalid" > <!--Class.field-error will be assigned to a value of expression which if true class will be created if false class ill not be created now we want to show error when form is submitted -->
+               [class.field-error] = "form.submitted && nameField.invalid" (blur) = "onBlur(nameField)"> <!--Class.field-error will be assigned to a value of expression which if true class will be created if false class ill not be created now we want to show error when form is submitted -->
         <div [hidden] = "!form.submitted || nameField.valid " class="alert alert-danger">
           Enter a Name
         </div>
