--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 /* @import "~bootstrap/dist/css/bootstrap.min.css";             We can either Import it or add it in angular.json under styles */
+
+/*In this part we have looked how to use resourses of angular.io to give constant UI experience from there u can check prime
+faces or angular materials or ngx bootstrap just look around and make cool things*/
