--- a/src/app/user-setting-form/user-setting-form.component.html
+++ b/src/app/user-setting-form/user-setting-form.component.html
@@ -10,6 +10,11 @@
           Enter a Name
         </div>
         </div>
+        <button type="button" class="btn btn-primary" name="singleModel"    
+                [(ngModel)]="singleModel" btnCheckbox
+                btnCheckboxTrue="On" btnCheckboxFalse="Off">  <!--Make sure to give it a name-->
+                {{singleModel}}
+        </button>
 
         <div class="form-check form-group">  <!--  form-group will make space around the checkBox  -->
             <input class="form-check-input" type="checkbox" name="emailOffers" id="emailOffers" [(ngModel)] = "userSettings.emailOffers">
