--- a/src/app/user-setting-form/user-setting-form.component.html
+++ b/src/app/user-setting-form/user-setting-form.component.html
@@ -25,24 +25,14 @@
 
         <p>User Interface Style</p>
         <div class="form-group">
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="interfaceStyle" id="Light" value="light" checked [(ngModel)] = "userSettings.interfaceStyle">
-                <label class="form-check-label" for="Light">
-                Light
-                </label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="interfaceStyle" id="Medium" value="medium" [(ngModel)] = "userSettings.interfaceStyle">
-                <label class="form-check-label" for="Medium">
-                Medium
-                </label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="interfaceStyle" id="Dark" value="dark" [(ngModel)] = "userSettings.interfaceStyle" >
-                <label class="form-check-label" for="Dark">
-                Dark
-                </label>
-            </div>
+          <div class="btn-group">
+            <label class="btn btn-primary" name= "interfaceStyle" [(ngModel)]="userSettings.interfaceStyle" 
+                   btnRadio="Light" tabindex="0" role="button">Light</label>
+            <label class="btn btn-primary" name= "interfaceStyle" [(ngModel)]="userSettings.interfaceStyle"
+                   btnRadio="Medium" tabindex="0" role="button">Medium</label>
+            <label class="btn btn-primary" name= "interfaceStyle" [(ngModel)]="userSettings.interfaceStyle"
+                   btnRadio="Dark" tabindex="0" role="button">Dark</label>
+          </div>
         </div>
 
         <div class="form-group">
