--- a/src/app/user-setting-form/user-setting-form.component.html
+++ b/src/app/user-setting-form/user-setting-form.component.html
@@ -51,9 +51,14 @@
       </div>      
 
       <div class="form-group">
-        <label for="date"> Date</label>
-        <input type="date" id="date" name="date" class="form-control" [(ngModel)] = "userSettings.date" > <!--we gave date a name so that our form object knows that date field exists it is must-->
+        <label for="startDate">Start Date</label>
+        <input type="text" 
+        placeholder="Start Date"
+        class="form-control" 
+         [(ngModel)] = "startDate" name="startDate" id="startDate" 
+         bsDatepicker>
       </div>
+      {{startDate}}
 
       <div [hidden] = "!postError" class="alert alert-danger">
         {{postErrorMessage}}
