05. Working with timepicker

--- a/src/app/user-setting-form/user-setting-form.component.html
+++ b/src/app/user-setting-form/user-setting-form.component.html
@@ -58,7 +58,12 @@
          [(ngModel)] = "startDate" name="startDate" id="startDate" 
          bsDatepicker>
       </div>
-      {{startDate}}
+
+      <div class="form-group">
+        <label for="startTime">Start Time</label>
+        <timepicker [(ngModel)]="startTime" name = "startTime" id="startTime"></timepicker>
+      </div>
+
 
       <div [hidden] = "!postError" class="alert alert-danger">
         {{postErrorMessage}}
